--- a/package.json
+++ b/package.json
@@ -6,18 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
+    "antd": "^5.15.0",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^11.0.8",
+    "next": "14.1.1",
+    "nprogress": "^0.2.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
-    "next": "14.1.1"
+    "react-horizontal-scrolling-menu": "^6.0.2",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1"
+    "eslint-config-next": "14.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8",
+    "prettier": "3.2.5",
+    "tailwindcss": "^3.3.0"
   }
 }
